# CMI

./: .gitignore  .pre-commit-config.yaml  DATA_EXPLANATION.md  MODEL.md  config.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml  train.py
dataset/: test.csv  test_demographics.csv
documents/: CLAUDE.md  COMPETITION_ABSTRACT.md  MODEL.md  research_250819.md
documents/solutions/: existing_solution.md  gnn_kinematics_model.md  improvement_strategies.md
notebooks/: eda.ipynb  enhanced_hybrid_implementation.ipynb  ensemble-models.ipynb  existing_solution.ipynb  gnn_kinematics_model.ipynb  hybrid_lightgbm_model.ipynb  inference.ipynb  inference_use_demographics.ipynb  lightgbm_baseline.ipynb  train.ipynb
results/: lightgbm_baseline_submission.csv
solutions/: hybrid_model_proposal.md
src/: __init__.py  baseline_lightgbm.py  data_loader.py  dataset.py  evaluator.py  feature_processor.py  focal_loss.py  model.py  train_gnn_by_rl.py  trainer.py  utils.py
src/gnn_kinematics/: __init__.py  config.py  config.yaml  data_utils.py  feature_engineering.py  model.py
