[project]
name = "cmi"
version = "0.1.0"
description = "CMI Gesture Recognition - Detect Behavior with Sensor Data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "polars>=1.32.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.0.0",
    "mypy>=1.11.2",
    "bandit[toml]>=1.7.10",
    "safety>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "nbstripout>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101", "B601", "B404", "B602", "B614"]  # Allow assert, subprocess, and pytorch load/save

[tool.bandit.assert_used]
exclude = ["*test*.py", "*_test.py"]
